--- a/index.html
+++ b/index.html
@@ -3,78 +3,89 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <title>Homework1</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
         <ul>
           <li>
-            <a href="">Studio</a>
+            <a class="header-menu-list" href="">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a class="header-menu-list" href="">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a class="header-menu-list" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="header-contacts" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="header-contacts" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="business">
+        <h1 class="title-business">Effective Solutions for Your Business</h1>
+        <button class="business-btn" type="button">Order Service</button>
       </section>
       <section>
-        <h2>points</h2>
+        <h2 class="visualy-hidden">points</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="strategy-title">Strategy</h3>
+            <p class="strategy-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="punctuality-title">Punctuality</h3>
+            <p class="punctuality-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="diligence-title">Diligence</h3>
+            <p class="diligence-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="technologies-title">Technologies</h3>
+            <p class="technologies-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="our-team">
+        <h2 class="team-title">Our Team</h2>
         <ul>
           <li>
             <img
@@ -82,9 +93,10 @@
               alt="Mark Guerrero"
               width="264"
               height="260"
+              class="team-img"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-subtitle-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -92,9 +104,10 @@
               alt="Tom Ford"
               width="264"
               height="260"
+              class="team-img"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-subtitle-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -102,9 +115,10 @@
               alt="Camila Garcia"
               width="264"
               height="260"
+              class="team-img"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-subtitle-text">Marketing</p>
           </li>
           <li>
             <img
@@ -112,16 +126,17 @@
               alt="Daniel Wilson"
               width="264"
               height="260"
+              class="team-img"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-subtitle-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
