--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <nav>
-        <a class="header-logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
         <ul>
           <li>
             <a class="header-menu-list" href="">Studio</a>
