--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <body>
     <header>
       <nav>
-        <a class="header-logo" href="./index.html">Web<span>Studio</span></a>
+        <a class="header-logo" href="./index.html"
+          ><span class="header-logo-italic">Web</span> Studio</a
+        >
         <ul>
           <li>
             <a class="header-menu-list" href="">Studio</a>
@@ -135,7 +137,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="footer-logo" href="./index.html"
+        ><span class="header-logo-italic">Web</span> Studio</a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
