--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
     <header>
       <nav>
         <a class="header-logo" href="./index.html"
-          ><span class="header-logo-italic">Web</span> Studio</a
+          ><span class="header-logo-italic">Studio</span> Web</a
         >
         <ul>
           <li>
-            <a class="header-menu-list" href="">Studio</a>
+            <a class="header-list" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="header-menu-list" href="">Portfolio</a>
+            <a class="header-list" href="">Portfolio</a>
           </li>
           <li>
-            <a class="header-menu-list" href="">Contacts</a>
+            <a class="header-list" href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -62,24 +62,24 @@
           </li>
 
           <li>
-            <h3 class="punctuality-title">Punctuality</h3>
-            <p class="punctuality-text">
+            <h3 class="strategy-title">Punctuality</h3>
+            <p class="strategy-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="diligence-title">Diligence</h3>
-            <p class="diligence-text">
+            <h3 class="strategy-title">Diligence</h3>
+            <p class="strategy-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="technologies-title">Technologies</h3>
-            <p class="technologies-text">
+            <h3 class="strategy-title">Technologies</h3>
+            <p class="strategy-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -138,7 +138,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="header-logo-italic">Web</span> Studio</a
+        ><span class="header-logo-italic">Studio</span> Web</a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
