--- a/index.html
+++ b/index.html
@@ -135,6 +135,77 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h3 class="portfolio-title">Our Portfolio</h3>
+        <ul>
+          <li>
+            <img
+              src="./images/img (1) (1).jpg"
+              alt="Banking App"
+              width="360px"
+              height="300px"
+              class="portfolio-img"
+            />
+            <h4 class="portfolio-subtitle">Banking App</h4>
+            <p class="portfolio-text">app</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (1).jpg"
+              alt="Cashless Payment"
+              width="360px"
+              height="300px"
+              class="portfolio-img"
+            />
+            <h4 class="portfolio-subtitle">Cashless Payment</h4>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (2) (1).jpg"
+              alt="Meditation App"
+              width="360px"
+              height="300px"
+              class="portfolio-img"
+            />
+            <h4 class="portfolio-subtitle">Meditation App</h4>
+            <p class="portfolio-text">app</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (3) (1).jpg"
+              alt="Taxi Service"
+              width="360px"
+              height="300px"
+              class="portfolio-img"
+            />
+            <h4 class="portfolio-subtitle">Taxi Service</h4>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (4) (1).jpg"
+              alt="Screen Illustrations"
+              width="360px"
+              height="300px"
+              class="portfolio-img"
+            />
+            <h4 class="portfolio-subtitle">Screen Illustrations</h4>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/img (5) (1).jpg"
+              alt="Online Courses"
+              width="360px"
+              height="300px"
+              class="portfolio-img"
+            />
+            <h4 class="portfolio-subtitle">Online Courses</h4>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
