--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo" href="./index.html"
-        ><span class="header-logo-italic">Studio</span> Web</a
+        ><span class="header-logo-footer">Studio</span> Web</a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
