--- a/index.html
+++ b/index.html
@@ -15,30 +15,30 @@
   <body>
     <header>
       <nav>
-        <a class="header-logo" href="./index.html"
-          ><span class="header-logo-italic">Studio</span> Web</a
+        <a class="header-logo link" href="./index.html"
+          ><span class="header-logo-italic link">Studio</span> Web</a
         >
         <ul>
           <li>
-            <a class="header-list" href="./index.html">Studio</a>
+            <a class="header-list link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="header-list" href="">Portfolio</a>
+            <a class="header-list link" href="">Portfolio</a>
           </li>
           <li>
-            <a class="header-list" href="">Contacts</a>
+            <a class="header-list link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a class="header-contacts" href="mailto:info@devstudio.com"
+            <a class="header-contacts link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="header-contacts" href="tel:+110001111111"
+            <a class="header-contacts link" href="tel:+110001111111"
               >+11 (000) 111-11-11</a
             >
           </li>
@@ -208,8 +208,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"
-        ><span class="logo-footer">Studio</span> Web</a
+      <a class="footer-logo link" href="./index.html"
+        ><span class="logo-footer link">Studio</span> Web</a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
