--- a/index.html
+++ b/index.html
@@ -136,72 +136,72 @@
         </ul>
       </section>
       <section>
-        <h3 class="portfolio-title">Our Portfolio</h3>
+        <h2 class="portfolio-title">Our Portfolio</h2>
         <ul>
           <li>
             <img
-              src="./images/img (1) (1).jpg"
+              src="./images/img (1) (1).jpeg"
               alt="Banking App"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
               class="portfolio-img"
             />
-            <h4 class="portfolio-subtitle">Banking App</h4>
-            <p class="portfolio-text">app</p>
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
-              src="./images/img (1).jpg"
+              src="./images/img (1).jpeg"
               alt="Cashless Payment"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
               class="portfolio-img"
             />
-            <h4 class="portfolio-subtitle">Cashless Payment</h4>
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/img (2) (1).jpg"
+              src="./images/img (2) (1).jpeg"
               alt="Meditation App"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
               class="portfolio-img"
             />
-            <h4 class="portfolio-subtitle">Meditation App</h4>
-            <p class="portfolio-text">app</p>
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-text">App</p>
           </li>
           <li>
             <img
-              src="./images/img (3) (1).jpg"
+              src="./images/img (3) (1).jpeg"
               alt="Taxi Service"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
               class="portfolio-img"
             />
-            <h4 class="portfolio-subtitle">Taxi Service</h4>
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
           <li>
             <img
-              src="./images/img (4) (1).jpg"
+              src="./images/img (4) (1).jpeg"
               alt="Screen Illustrations"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
               class="portfolio-img"
             />
-            <h4 class="portfolio-subtitle">Screen Illustrations</h4>
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
             <p class="portfolio-text">Design</p>
           </li>
           <li>
             <img
-              src="./images/img (5) (1).jpg"
+              src="./images/img (5) (1).jpeg"
               alt="Online Courses"
-              width="360px"
-              height="300px"
+              width="360"
+              height="300"
               class="portfolio-img"
             />
-            <h4 class="portfolio-subtitle">Online Courses</h4>
+            <h3 class="portfolio-subtitle">Online Courses</h3>
             <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
