--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </section>
       <section class="our-team">
         <h2 class="team-title">Our Team</h2>
-        <ul>
+        <ul class="team-list">
           <li>
             <img
               src="./images/markguerrero.jpg"
