--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
           <li>
             <a class="header-contacts link" href="mailto:info@devstudio.com"
@@ -88,8 +88,8 @@
       </section>
       <section class="our-team">
         <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li>
+        <ul>
+          <li class="team-list">
             <img
               src="./images/markguerrero.jpg"
               alt="Mark Guerrero"
@@ -100,7 +100,7 @@
             <h3 class="team-subtitle">Mark Guerrero</h3>
             <p class="team-subtitle-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/tomford.jpg"
               alt="Tom Ford"
@@ -111,7 +111,7 @@
             <h3 class="team-subtitle">Tom Ford</h3>
             <p class="team-subtitle-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/camilagarcia.jpg"
               alt="Camila Garcia"
@@ -122,7 +122,7 @@
             <h3 class="team-subtitle">Camila Garcia</h3>
             <p class="team-subtitle-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-list">
             <img
               src="./images/danielwilson.jpg"
               alt="Daniel Wilson"
@@ -140,7 +140,7 @@
         <ul>
           <li>
             <img
-              src="./images/img (1) (1).jpeg"
+              src="./images/img(1).jpeg"
               alt="Banking App"
               width="360"
               height="300"
@@ -151,7 +151,7 @@
           </li>
           <li>
             <img
-              src="./images/img (1).jpeg"
+              src="./images/img(2).jpeg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -162,7 +162,7 @@
           </li>
           <li>
             <img
-              src="./images/img (2) (1).jpeg"
+              src="./images/img(3).jpeg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -173,7 +173,7 @@
           </li>
           <li>
             <img
-              src="./images/img (3) (1).jpeg"
+              src="./images/img(4).jpeg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -184,7 +184,7 @@
           </li>
           <li>
             <img
-              src="./images/img (4) (1).jpeg"
+              src="./images/img(5).jpeg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -195,7 +195,7 @@
           </li>
           <li>
             <img
-              src="./images/img (5) (1).jpeg"
+              src="./images/img(6).jpeg"
               alt="Online Courses"
               width="360"
               height="300"
