--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <ul>
           <li>
             <img
-              src="./images/img(1).jpeg"
+              src="./images/img.jpeg"
               alt="Banking App"
               width="360"
               height="300"
@@ -151,7 +151,7 @@
           </li>
           <li>
             <img
-              src="./images/img(2).jpeg"
+              src="./images/img.two.jpeg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -162,7 +162,7 @@
           </li>
           <li>
             <img
-              src="./images/img(3).jpeg"
+              src="./images/img.free.jpeg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -173,7 +173,7 @@
           </li>
           <li>
             <img
-              src="./images/img(4).jpeg"
+              src="./images/img.four.jpeg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -184,7 +184,7 @@
           </li>
           <li>
             <img
-              src="./images/img(5).jpeg"
+              src="./images/img.five.jpeg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -195,7 +195,7 @@
           </li>
           <li>
             <img
-              src="./images/img(6).jpeg"
+              src="./images/img.six.jpeg"
               alt="Online Courses"
               width="360"
               height="300"
