--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           </li>
           <li>
             <img
-              src="./images/img.two.jpeg"
+              src="./images/imgtwo.jpeg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -162,7 +162,7 @@
           </li>
           <li>
             <img
-              src="./images/img.free.jpeg"
+              src="./images/imgfree.jpeg"
               alt="Meditation App"
               width="360"
               height="300"
@@ -173,7 +173,7 @@
           </li>
           <li>
             <img
-              src="./images/img.four.jpeg"
+              src="./images/imgfour.jpeg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -184,7 +184,7 @@
           </li>
           <li>
             <img
-              src="./images/img.five.jpeg"
+              src="./images/imgfive.jpeg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -195,7 +195,7 @@
           </li>
           <li>
             <img
-              src="./images/img.six.jpeg"
+              src="./images/imgsix.jpeg"
               alt="Online Courses"
               width="360"
               height="300"
