--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <title>Homework1</title>
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a class="header-logo link" href="./index.html"
-          ><span class="header-logo-italic link">Studio</span> Web</a
+          ><span class="header-logo-italic link">Web</span> Studio</a
         >
         <ul>
           <li>
@@ -209,7 +209,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo link" href="./index.html"
-        ><span class="logo-footer link">Studio</span> Web</a
+        ><span class="logo-footer link">Web</span> Studio</a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
