--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="header-logo link" href="./index.html"
           ><span class="header-logo-italic link">Web</span> Studio</a
         >
-        <ul>
+        <ul class="no-bullets">
           <li>
             <a class="header-list link" href="./index.html">Studio</a>
           </li>
@@ -31,7 +31,7 @@
         </ul>
       </nav>
       <address class="address">
-        <ul>
+        <ul class="no-bullets">
           <li>
             <a class="header-contacts link" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
@@ -52,7 +52,7 @@
       </section>
       <section>
         <h2 class="visualy-hidden">points</h2>
-        <ul>
+        <ul class="no-bullets">
           <li>
             <h3 class="strategy-title">Strategy</h3>
             <p class="strategy-text">
@@ -88,7 +88,7 @@
       </section>
       <section class="our-team">
         <h2 class="team-title">Our Team</h2>
-        <ul>
+        <ul class="no-bullets">
           <li class="team-list">
             <img
               src="./images/markguerrero.jpg"
@@ -137,7 +137,7 @@
       </section>
       <section>
         <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul>
+        <ul class="no-bullets">
           <li>
             <img
               src="./images/img.jpeg"
