--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a class="header-logo link" href="./index.html"
-          ><span class="header-logo-italic link">Web</span>Studio</a
+          >Web<span class="header-logo-italic link">Studio</span></a
         >
         <ul class="no-bullets">
           <li>
