--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </main>
     <footer class="footer">
       <a class="footer-logo link" href="./index.html"
-        ><span class="logo-footer link">Studio</span>Web</a
+        >Web<span class="logo-footer link">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
